--- a/src/components/MainHeader/MainHeader.scss
+++ b/src/components/MainHeader/MainHeader.scss
@@ -11,4 +11,9 @@
     max-width: 1200px;
     margin: 0 auto;
     min-height: 100px;
+    a {
+        color: #fff;
+        margin-right: 15px;
+        text-decoration: none;
+    }
 } 
