--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,15 @@
   font-size: large;
 }
 
+.error {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 40px;
+    color: #444;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
