--- a/src/components/MainHeader/MainHeader.scss
+++ b/src/components/MainHeader/MainHeader.scss
@@ -10,7 +10,7 @@
 .main-header__inner {
     max-width: 1200px;
     margin: 0 auto;
-    min-height: 100px;
+    min-height: 10vh;
     a {
         color: #fff;
         margin-right: 15px;
