--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,13 +1,13 @@
 .login {
     max-width: 1280px;
-    min-height: 709px;
     margin: auto;
+    box-sizing: border-box;
+    margin-top: 12vh;
+    height: 73vh;
     background: #754;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 120px;
-    margin-bottom: 120px;
     box-sizing: border-box;
     padding: 10px;
     padding-right: 0px;
