--- a/src/pages/ProductDescription/ProductDescription.scss
+++ b/src/pages/ProductDescription/ProductDescription.scss
@@ -1,17 +1,18 @@
 .product-description {
     max-width: 1280px;
-    min-height: 709px;
     margin: auto;
+    box-sizing: border-box;
+    margin-top: 12vh;
+    height: 73vh;
     background: #754;
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
-    margin-top: 120px;
-    margin-bottom: 120px;
     box-sizing: border-box;
     padding: 10px;
     padding-right: 0px;
     color: #754;
+    word-wrap: break-word;
 }
 
 .product-description__img-wrap {
