--- a/src/pages/ProductList/ProductList.scss
+++ b/src/pages/ProductList/ProductList.scss
@@ -1,13 +1,13 @@
 .product-list {
     max-width: 1280px;
-    min-height: 709px;
     margin: auto;
+    box-sizing: border-box;
+    margin-top: 12vh;
+    height: 73vh;
     background: #754;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin-top: 120px;
-    margin-bottom: 120px;
     box-sizing: border-box;
     padding: 10px;
     padding-right: 0px;
